@@ -12,6 +12,8 @@
   *) Ignore the '-named_curve auto' value for compatibility of applications
      with OpenSSL 1.0.2.
      [Tomas Mraz <tmraz@fedoraproject.org>]
+  *) Support for SSL_OP_NO_ENCRYPT_THEN_MAC in SSL_CONF_cmd.
+     [Emilia Käsper]
 
  Changes between 1.1.0e and 1.1.0f [25 May 2017]
 
